<resources>
    <string name="app_name">My Scent</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="do_not_have_any_account">Don\'t have an account? <font color="#FF48A7F8">Register</font></string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="already_have_accounts">Already have an account? <font color="#FF48A7F8">Login</font></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="unisex">Unisex</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add To Cart</string>

    <string name="indicator_weak">(Weak)</string>
    <string name="indicator_intimate">(Intimate)</string>
    <string name="indicator_moderate">(Moderate)</string>
    <string name="indicator_strong">(Strong)</string>
    <string name="indicator_very_strong">(Very Strong)</string>
    <string name="submit">Submit</string>
</resources>